fix bottom sheet animation overflow area

--- a/src/css/ha-bottom-sheet.css
+++ b/src/css/ha-bottom-sheet.css
@@ -23,16 +23,15 @@ wa-drawer::part(dialog) {
 }
 wa-drawer::part(body) {
 	padding-top: 8px;
-	overflow: visible;
 }
 
 /* Animation buffer area  */
 wa-drawer::part(dialog) {
 	overflow: visible;
 }
-wa-drawer::part(body)::after {
+wa-drawer::part(dialog)::after {
 	content: '';
-	position: relative;
+	position: fixed;
 	bottom: -128px;
 	width: 100%;
 	height: 128px;
